        - /concierge/badges/<badge_id>/edit
    3 - [new] Graphic upload drag and drop file feature
        - /concierge/badges/<badge_id>/edit
        - /concierge/roadmaps/<roadmap_id>/edit
    4 - [new] Task edit
        - /concierge/badges/<badge_id>/edit
    5 - [new] About page
        - /about
    6 - [new] Dashboard badge status links
        - /concierge/badge-status

v1.0.61 2025-11-06 dinukadesilva
    1 - [fix] Resource roadmap badge summary context methods
        - /organizations/<organization_id>
        - /concierge/dashboard
        - /concierge/badge-status
    2 - [new] The new badge status page for staff and concierge
        - /concierge/badge-status

v1.0.60 2025-11-04 dinukadesilva
    1 - [fix] Left list scroll bar of the multi list select component
        - /concierge/badges/<badge_id>/edit
        - /concierge/badges/new
        - /concierge/roadmaps/new
        - /concierge/roadmaps/<roadmap_id>/edit
    2 - [bug-fix] Resource badge page task required status. (CTT-762)
        - /resources/<resource_id>/roadmaps/<roadmap_id>/badges/<badge_id>
    3 - [draft] Badge status page
        - /concierge/badge-status

v1.0.59 2025-10-31 dinukadesilva 
    1 - [fix] Removing roadmap assignment from the badge creation and edit
        - /concierge/badges/<badge_id>/edit
        - /concierge/badges/new
    2 - [fix] Enabling reordering for the roadmap badges and prerequisite badges
        - Everything on (1)
        - /concierge/roadmaps/new
        - /concierge/roadmaps/<roadmap_id>/edit
    3 - [fix] Minor typo fixes
        - Everything on (1)

v1.0.58 2025-10-31 dinukadesilva
    1 - [new] task creation, reordering tasks
        - /concierge/badges/<badge_id>/edit
        - /concierge/badges/new
    2 - [fix] UI improvements of the multi list select component with drag and drop ordering
        - Everything on (1)
    3 - [fix] Adding validation, empty labels and other minor fixes
        - Everything on (1)
        - /concierge/roadmaps/new