@@ -186,8 +186,6 @@ p {
 }
 
 .concierge-roadmap-card {
-  padding-top: 70px;
-
   .roadmap-card-icon-row {
     top: -20px;
 
